# Technovation-agent

./: README.md  agent.py  main.py  pyproject.toml  test_agent.py  tools.py
coaching_agent/: __init__.py  agent.py  cal_com.py  tools.py
